tests/baselines/reference/conflictMarkerDiff3Trivia1.errors.txt
tests/cases/compiler/conflictMarkerDiff3Trivia1.ts(2,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia1.ts(4,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia1.ts(6,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia1.ts(8,1): error TS1185: Merge conflict marker encountered.


==== tests/cases/compiler/conflictMarkerDiff3Trivia1.ts (4 errors) ====
    class C {
    <<<<<<< HEAD
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 1;
    ||||||| merged common ancestors
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 3;
    =======
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
        v = 2;
    >>>>>>> Branch-a
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    }